Starting viewer cleanup